2003-10-07  graydon hoare  <graydon@pobox.com>

	* commands.cc, work.cc, work.hh: Add some preliminary stuff
	to support explicit renaming, .mt-attrs.
	* monotone.texi: Add skeletal sections for command reference,
	hook reference, CVS phrasebook. Fill in some parts.

2003-10-02  graydon hoare  <graydon@pobox.com>

	* boost/circular_buffer*.hpp: Add.
	* AUTHORS, cert.cc, commands.cc, database.cc,
	diff_patch.cc, http_tasks.cc, keys.cc, lua.cc, manifest.cc,
	network.cc, nntp_machine.cc, packet.cc, patch_set.cc, 
	rcs_import.cc, sanity.cc, sanity.hh, ui.hh, update.cc,
	vocab_terms.hh, work.cc:	
	remove existing circular buffer code, replace all
	logging and asserty stuff with boost::format objects
	rather than vsnprintf.

2003-10-01  graydon hoare  <graydon@pobox.com>

	* testsuite.at: Don't use getenv("HOSTNAME").
	* database.cc (exec, fetch): Do va_end/va_start again in between
	logging and executing query.

2003-09-28  Tom Tromey  <tromey@redhat.com>

	* monotone.texi: Added @direntry.

2003-09-27  Nathaniel Smith  <njs@pobox.com>

	* monotone.cc: Remove "monotone.db" default to --db
	option in help text.

2003-09-27  graydon hoare  <graydon@pobox.com>

	* diff_patch.cc: Rework conflict detection.
	* rcs_import.cc: Remove some pointless slowness.
	* monotone.spec: Install info files properly.

	Release point (v 0.5).

2003-09-27  graydon hoare  <graydon@pobox.com>

	* AUTHORS, NEWS, configure.ac: Update for 0.5 release.
	* monotone.texi: Various updates.	
	* xdelta.cc (compute_delta): Fix handling of empty data.
	* database.cc (sql): Require --db for init.
	* work.cc (read_options_map): Fix options regex.

2003-09-27  graydon hoare  <graydon@pobox.com>

	* lcs.hh: New jaffer LCS algorithm.
	* interner.hh, rcs_import.cc: Templatize interner.
	* diff_patch.hh: Use interner, new LCS.

2003-09-27  Tom Tromey  <tromey@redhat.com>

	* commands.cc (fetch): Always try lua hook; then default to all
	known URLs.

2003-09-26  Tom Tromey  <tromey@redhat.com>
