@@ -1,5 +1,11 @@
 2003-10-07  graydon hoare  <graydon@pobox.com>
 
+	* manifest.hh, manifest.cc, rcs_import.cc: Write manifests w/o
+	compression.
+	* vocab.hh, vocab.cc: Don't re-verify verified data.
+
+2003-10-07  graydon hoare  <graydon@pobox.com>
+
 	* commands.cc, work.cc, work.hh: Add some preliminary stuff
 	to support explicit renaming, .mt-attrs.
 	* monotone.texi: Add skeletal sections for command reference,
